Nebula Logger/main/default/objects/LoggerSettings__c/fields/AnonymousMode__c.field-meta.xml
<CustomField>
    <fullName>AnonymousMode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, any logs generated will not have any user-specific details set - any fields related to the User, Profile, etc. will be null.</inlineHelpText>
    <label>Anonymous Mode</label>
    <type>Checkbox</type>
</CustomField>