Nebula Logger/main/default/objects/LoggerSettings__c/fields/DefaultLogShareAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>DefaultLogShareAccessLevel__c</fullName>
    <defaultValue>&apos;Read&apos;</defaultValue>
    <description>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.

Possible Values:
(blank)
Read
Edit</description>
    <inlineHelpText>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.

Possible Values:
(blank)
Read
Edit</inlineHelpText>
    <label>Default Log Records Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>