Nebula Logger/main/default/objects/LoggerSettings__c/fields/EnableSystemMessages__c.field-meta.xml
<CustomField>
    <fullName>EnableSystemMessages__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, log entries may be generated that contain additional details about the logging system.</description>
    <inlineHelpText>When enabled, log entries may be generated that contain additional details about the logging system.</inlineHelpText>
    <label>Enable System Messages</label>
    <type>Checkbox</type>
</CustomField>