Nebula Logger/main/default/objects/LoggerSettings__c/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>