Nebula Logger/main/default/objects/LoggerSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>IsEnabled__c</columns>
    <columns>LoggingLevel__c</columns>
    <columns>AnonymousMode__c</columns>
    <columns>EnableSystemMessages__c</columns>
    <columns>DefaultLogShareAccessLevel__c</columns>
    <columns>DefaultNumberOfDaysToRetainLogs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>